--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.1.0",
+    "@mui/x-data-grid": "^8.3.1",
+    "@mui/x-date-pickers": "^8.3.1",
+    "@mui/x-date-pickers-pro": "^8.3.1",
     "@toolpad/core": "^0.14.0",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3"
